[metadata]
name = circadiand
version = file: VERSION
description = REST service for powering hosts on/off (WOL, IPMI, SSH).
author = Erik J. Olson <hello@erikjolson.com>

[options]
python_requires = >=3.12
packages = find:
install_requires =
	fastapi
	uvicorn[standard]
	pydantic>=2
	pyyaml
	pyghmi
	paramiko
	cryptography
	wakeonlan

[options.packages.find]
include =
	circadiand
	circadiand.*

[options.package_data]
circadiand =
	config.sample.yaml

[options.extras_require]
test =
	pytest
	httpx
	pytest-cov
